# Traine_aide_decission

./: ML_PROJECT_DIRECTION.md  README.md  goal.md  launch.ipynb  pytest.ini  requirements.txt
datasets/: __init__.py  export_candidate_dataset.py  export_external_oracle_dataset.py  export_pokerbench_oracle_dataset.py  merge_oracle_3intent_dataset.py
docs/: bootstrap_candidate_dataset.md  bootstrap_training.md  candidate_quality.md  candidate_sensitivity.md  hero_oriented_solver_jobs.md  hero_oriented_synthetic_generation.md  pokerth_action_replay.md  pokerth_import.md  pokerth_solver_pipeline.md  snapshot_to_solver_job.md  solver_action_candidate.md  solver_adapter.md  solver_batch_pipeline.md  solver_eligibility.md  solver_job_file_runner.md  solver_jobs.md  solver_run_analysis.md  solver_runtime_calibration.md  solver_subprocess_runner.md  strategy_extraction.md  synthetic_spot_generation.md
experiments/: advanced_bootstrap_v5_diagnostics.py  analyze_candidate_sensitivity.py  analyze_solver_run_results.py  audit_bootstrap_v4.py  calibrate_solver_runtime.py  dist_schema_alignment.py  generate_bootstrap_solver_candidates.py  generate_bootstrap_v4.py  generate_raise_solver_candidates.py  generate_synthetic_solver_jobs.py  import_pokerth_history.py  inspect_solver_strategy.py  live_bb_baseline_v1.py  merged_oracle_preflop_postflop_v1.py  merged_oracle_preflop_postflop_v2.py  pokerbench_oracle_3intent_v1.py  pokerbench_oracle_baseline_v1.py  report_bootstrap_v5_feature_views.py  run_bootstrap_v5_4000.py  run_pokerth_solver_pipeline.py  run_solver_batch.py  run_synthetic_solver_jobs.py  solver_smoke_test.py  train_bootstrap_v5.py
ml_dataset_export/: README.md  README_solver_dataset.md  __init__.py  __main__.py  feature_rebuilder.py  solver_adapter.py  solver_dataset_cli.py  solver_dataset_validator.py  solver_dataset_writer.py  solver_spot_generator.py  solver_training_dataset.jsonl  training_dataset.jsonl
models/: __init__.py  predict_bootstrap_model.py  (+1 more)
pokerth/: __init__.py  (+4 more)
projet importer/poker_solver-main/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER.md  LICENSE  README.md  USAGE.md  pyproject.toml
projet importer/poker_solver-main/.github/: PULL_REQUEST_TEMPLATE.md
projet importer/poker_solver-main/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
projet importer/poker_solver-main/assets/: README.md  poker_solver.icns
projet importer/poker_solver-main/crates/cfr_core/: Cargo.toml
projet importer/poker_solver-main/crates/cfr_core/benches/: baseline.json  dcfr_bench.rs
projet importer/poker_solver-main/crates/cfr_core/src/: abstraction.rs  dcfr.rs  dcfr_vector.rs  exploit.rs  game.rs  hunl.rs  hunl_eval.rs  hunl_solver.rs  hunl_tree.rs  kuhn.rs  layout.rs  leduc.rs  lib.rs  pcs.rs  preflop.rs  simd.rs  solver.rs
projet importer/poker_solver-main/crates/cfr_core/tests/: hunl_state_unit.rs  test_hunl_rust.rs
projet importer/poker_solver-main/docs/: aggregator_vs_true_nash_explainer.md  dmg_install_guide.md
projet importer/poker_solver-main/docs/pr_proposals/: v1_5_pr_23_implementer_notes.md  v1_5_pr_24a_implementer_notes.md  v1_5_pr_24b_implementer_notes.md
projet importer/poker_solver-main/examples/: range_vs_range_river.py  tiny_csv.csv
projet importer/poker_solver-main/poker_solver/: __init__.py  action_abstraction.py  card.py  cli.py  dcfr.py  equity.py  evaluator.py  games.py  hunl.py  hunl_solver.py  library.py  library_schema.sql  preflop.py  pushfold.py  range.py  range_aggregator.py  solver.py
projet importer/poker_solver-main/poker_solver/abstraction/: __init__.py  buckets.py  emd_clustering.py  equity_features.py  precompute.py
projet importer/poker_solver-main/poker_solver/charts/: README.md  __init__.py  chart_100bb_bb_defend.json  chart_100bb_btn_3bet.json  chart_100bb_sb_open.json  chart_30bb_sb_jam.json  pushfold_v1.json
projet importer/poker_solver-main/poker_solver/parity/: __init__.py  noambrown_wrapper.py
projet importer/poker_solver-main/poker_solver/profiler/: __init__.py  memory.py
projet importer/poker_solver-main/scripts/: batch_solve.py  build_macos_dmg.sh  build_noambrown.sh  check_pr.sh  entitlements.plist  generate_pushfold_charts.py  poker_solver.spec  pyinstaller_entry.py  setup_references.sh  sign_and_notarize.py  split_main_for_publish.sh
projet importer/poker_solver-main/tests/: _equity_helpers.py  conftest.py  test_abstraction_buckets.py  test_abstraction_emd.py  test_abstraction_integration.py  test_action_abstraction.py  test_asymmetric_contributions.py  test_card.py  test_cli_subcommands.py  test_dcfr_core.py  test_dcfr_diff.py  test_equity.py  test_equity_helpers.py  test_evaluator.py  test_exploit_diff.py  test_hunl_config_validation.py  test_hunl_core.py  test_hunl_diff.py  test_hunl_postflop_solve.py  test_hunl_tree.py  test_kuhn_dcfr.py  test_leduc_core.py  test_leduc_dcfr.py  test_leduc_diff.py  test_leduc_intuition.py  test_library.py  test_library_cli.py  test_library_ui_integration.py  test_memory_profiler.py  test_node_locking.py  test_preflop_diff.py  test_preflop_python.py  test_pushfold.py  test_range.py  test_range_vs_range_aggregator.py  test_range_vs_range_nash.py  test_range_vs_range_rust_diff.py  test_river_diff.py  test_river_diff_self_sanity.py  test_ui_pr24a.py  (+3 more)
projet importer/poker_solver-main/tests/data/: river_spots.json
projet importer/poker_solver-main/tests/fixtures/: __init__.py  hunl_solve_fixtures.py
projet importer/poker_solver-main/ui/: __init__.py  app.py  mock_solver.py  mock_solver_fixtures.py  state.py
projet importer/poker_solver-main/ui/views/: __init__.py  library_browser.py  node_lock_editor.py  onboarding.py  range_freq_editor.py  range_matrix.py  run_panel.py  spot_input.py  tree_browser.py
(+75 files in other folders)
